plugins/mousemark: clear drawing when no modifiers are pressed

Previously when drawing has length 1, it is not cleared. So the
remaining point in drawing can connect with the new point when the user
represses the modifiers, leading to a unexpected mark.

This ammends commit 46807b1a72f1d760b52b92a574face4a7a509a39.

BUG: 482297